@@ -252,15 +252,39 @@ name|int
 name|finishedChildIndex
 parameter_list|)
 block|{
-return|return
-name|super
-operator|.
-name|visitDbPath
-argument_list|(
 name|expression
-argument_list|,
-name|finishedChildIndex
+operator|.
+name|visit
+argument_list|(
+operator|new
+name|EJBQLDbPathTranslator
+argument_list|(
+name|context
 argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|appendMultiColumnPath
+parameter_list|(
+name|EJBQLMultiColumnOperand
+name|operand
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|EJBQLException
+argument_list|(
+literal|"Can't order on multi-column paths or objects"
+argument_list|)
+throw|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
 return|;
 block|}
 block|}
