@@ -4279,7 +4279,7 @@ argument_list|)
 expr_stmt|;
 comment|// select Paintings, where one of it will be null
 name|EJBQLQuery
-name|queryFullProduct
+name|query
 init|=
 operator|new
 name|EJBQLQuery
@@ -4297,7 +4297,7 @@ name|context
 operator|.
 name|performQuery
 argument_list|(
-name|queryFullProduct
+name|query
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -4359,6 +4359,110 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testOrderByDbPath
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|"a3"
+argument_list|)
+expr_stmt|;
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|2
+argument_list|,
+literal|"a2"
+argument_list|)
+expr_stmt|;
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|3
+argument_list|,
+literal|"a1"
+argument_list|)
+expr_stmt|;
+name|EJBQLQuery
+name|query
+init|=
+operator|new
+name|EJBQLQuery
+argument_list|(
+literal|"SELECT a FROM Artist a ORDER BY db:a.ARTIST_ID DESC"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result
+init|=
+name|context
+operator|.
+name|performQuery
+argument_list|(
+name|query
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"a1"
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getArtistName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"a2"
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getArtistName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"a3"
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|getArtistName
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
